--- a/Web scraping.ipynb
+++ b/Web scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,78 +25,45 @@
     "#url = 'https://www.kotsovolos.gr/site/sound-vision/televisions/led-lcd?v=0&flt=100&page=2' #3rd tv page\n",
     "#url = 'https://www.kotsovolos.gr/site/household-appliances/fridges/fridge-freezers?v=0&flt=100' #Fridges\n",
     "#url = 'https://www.kotsovolos.gr/site/search.jsp?v=0&searchfor=BBBK1BYajVlbmg=&flt=1000' #Search ΨΥΓΕΙΑ\n",
-    "url = 'https://www.kotsovolos.gr/site/search.jsp?v=0&searchfor=BBBYkdGd2RHOXc=&flt=1000' #Search laptop\n",
-    "response = requests.get(url)"
+    "#url = 'https://www.kotsovolos.gr/site/search.jsp?v=0&searchfor=BBBYkdGd2RHOXc=&flt=1000' #Search laptop\n",
+    "#url = 'https://www.kotsovolos.gr/site/search.jsp?v=0&searchfor=BBBN09mMzRlM24=&flt=10000' #Search Μηχανή\n",
+    "#url = 'https://www.kotsovolos.gr/site/search.jsp?v=0&searchfor=BBBNnVudDUvVHY=&flt=10000' #Search κινητό\n",
+    "#url = 'https://www.kotsovolos.gr/site/search.jsp?v=0&searchfor=BBBNGU3bDgrLzE0ZkU9&flt=10000' # Search αξεσουάρ\n",
+    "#url = 'https://www.kotsovolos.gr/site/search.jsp?v=0&searchfor=BBBOE92MTdmVGU4ZW52&flt=1000' # Search πλυντήριο\n",
+    "url = 'https://www.kotsovolos.gr/site/search.jsp?v=0&searchfor=BBBNnVIczVmSGg=&flt=1000' # Search κάμερα"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [200]>"
-      ]
-     },
-     "execution_count": 171,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "response\n",
-    "# 200 means it got through"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 172,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "soup = BeautifulSoup(response.text, 'html.parser')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 173,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mydivs = soup.findAll(\"a\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 174,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "products = list(filter(lambda x: '#yreviews' in x['href'], mydivs))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Products: 415\n"
+      "<Response [200]>\n",
+      "Products: 461\n"
      ]
     }
    ],
    "source": [
+    "#Scraping that does not support javascript generated content\n",
+    "response = requests.get(url)\n",
+    "print(response)\n",
+    "# 200 means it got through\n",
+    "soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "mydivs = soup.findAll(\"a\")\n",
+    "\n",
+    "# This does not work, all products have #yreviews, even of they don't have reviews\n",
+    "products = list(filter(lambda x: '#yreviews' in x['href'], mydivs))\n",
+    "\n",
     "print(f'Products: {len(products)}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -132,8 +99,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Checking for win32 chromedriver:2.46 in cache\n",
-      "Driver found in C:\\Users\\s.lagousis.POBUCA\\.wdm\\chromedriver\\2.46\\win32/chromedriver.exe\n"
+      "Checking for win32 chromedriver:74.0.3729.6 in cache\n",
+      "Driver found in C:\\Users\\s.lagousis.POBUCA\\.wdm\\chromedriver\\74.0.3729.6\\win32/chromedriver.exe\n"
      ]
     }
    ],
@@ -141,21 +108,48 @@
     "from selenium import webdriver\n",
     "import time\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
-    "driver = webdriver.Chrome(ChromeDriverManager().install())"
+    "driver = webdriver.Chrome(ChromeDriverManager().install())\n",
+    "#In case of error upgrade your chrome browser"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
-    "reviews_list = []"
+    "# Use selenium to get list of products to avoid products without reviews\n",
+    "driver.get(url)\n",
+    "time.sleep(60)\n",
+    "all_products_html = driver.page_source\n",
+    "all_products_soup = BeautifulSoup(all_products_html, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Products with reviews: 197\n"
+     ]
+    }
+   ],
+   "source": [
+    "products = []\n",
+    "all_products = all_products_soup.findAll(\"div\", class_=\"productdata\")\n",
+    "for product in all_products:\n",
+    "    if len(product.findAll('span', class_='yotpo-stars'))>0:\n",
+    "        products.append(product.findAll('a')[0]['href'])\n",
+    "print(f'Products with reviews: {len(products)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,14 +171,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reviews so far:151 |████████████████████████████████████████████████████████████| 100.0% \n"
+      "Reviews so far:684 |████████████████████████████████████████████████████████████| 100.0% \n"
      ]
     }
    ],
@@ -192,12 +186,13 @@
     "from random import randint\n",
     "\n",
     "i = 0\n",
+    "reviews_list = []\n",
     "\n",
     "for product in products:\n",
     "    i+=1\n",
     "    printProgressBar(i, len(products), prefix=f'Reviews so far:{len(reviews_list)}', length=60)\n",
     "        \n",
-    "    product_url = base_url + product['href']\n",
+    "    product_url = base_url + product #['href']\n",
     "    \n",
     "    # This does not support content created by javascript \n",
     "    #product_response = requests.get(url)\n",
@@ -215,30 +210,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(152,\n",
-       " [{'stars': 2,\n",
-       "   'text': ' ΘΕΤΙΚΑ: γρήγορος (1η εβδομάδα χρήσης) ΑΡΝΗΤΙΚΑ: Θόρυβος από τα ανεμιστηράκια από την πρώτη ημέρα, κολλάει στα γραφικά και η μπαταρία δεν κρατάει πάνω από 2ώρες '},\n",
-       "  {'stars': 3, 'text': ' ΚΑΝΕΙ ΠΟΛΥ ΘΟΡΥΒΟ! ΚΑΛΗ ΣΧΕΣΗ ΠΟΙΟΤΗΤΑΣ - ΤΙΜΗΣ '},\n",
-       "  {'stars': 4, 'text': ' Αρκετά καλα και οικονομικό '},\n",
-       "  {'stars': 5, 'text': ' Αψογο! Πολυ καλη ποιοτητα κατασκευης! '},\n",
-       "  {'stars': 5, 'text': ' Πολύ καλή ψύξη. '},\n",
-       "  {'stars': 5, 'text': ' Τέλειο '},\n",
+       "(686,\n",
+       " [{'stars': 5, 'text': ' extremely easy to set up and use. Great product! '},\n",
        "  {'stars': 5,\n",
-       "   'text': ' Άριστο αθόρυβο (ίσα που το άκους ότι δουλευει) κάνει πάρα πολύ καλά τν δουλειά του και για τα λεφτά του πιστεύω ότι καλύτερο και δεν έχει να ζηλέψει από τα πιο ακριβά '},\n",
-       "  {'stars': 5,\n",
-       "   'text': ' Εντάξει δεν ειναι εντελώς αθόρυβο, έχει έναν ελάχιστο μηχανικό θόρυβο. Είναι όμως πολύ καλό για την τιμή του '},\n",
+       "   'text': ' Πολύ ευχαριστημένος! , Ασύρματη λειτουργία καλή εικόνα πρωί-βράδυ, zoom, δυνατότητα περιστροφής, ομιλίας μέσα από την κάμερα, παρακολούθησης live από το κινητό-tablet,pc όποτε θέλεις, Μotion detection πολύ καλό όπως και ήχου detection επίσης καλό. και Καταγράφει 24 ώρες το εικοσιτετράωρο, ενημερώνει με app κινητό-tablet, και στέλνει 3 φωτογραφίες ...Διαβάστε Περισσότεραστο mail σου.(Μέχρι 60 mail το μήνα με δυνατότητα επέκτασης του αριθμού των mail). Διαβάστε Λιγότερα'},\n",
        "  {'stars': 4,\n",
-       "   'text': ' ειναι πολυ καλο, θα ήθελα να ειναι λιγο πιο δυνατοί οι ανεμιστήρες. Κατα τα αλλα ειναι μια χαρά '},\n",
-       "  {'stars': 4, 'text': ' καλο και αθορυβο '}])"
+       "   'text': ' το χρησιμοποιώ 1 περίπου μήνα και προς το παρόν μόνον ασύρματα.  ΘΕΤΙΚΑ:  - Εύκολη σύνδεση - Πολύ καλό για εποπτεία του χώρου (καταγραφή δεν έχω ακόμη δοκιμάσει) - Ευαίσθητοι αισθητήρες  - Άμεση ειδοποίηση για συμβάντα (το ενεργοποίησα δοκιμαστικά για λίγο), αλλά όπως διάβασα με κάποιους περιορισμούς στο πλήθος των ειδοποιήσεων. ...Διαβάστε Περισσότερα- Έλεγχος με πολλούς τρόπους (κινητές συσκευές, Η/Υ, ακόμα και μέσω web -cloud (live view) για 10\\' συνεχόμενα, μετά ξανα για άλλα 10\\' κοκ) - Καλή λήψη & απεικόνιση ακόμη και τη νύχτα  - Αμφίδρομη ηχητική επικοινωνία με το χώρο ΑΡΝΗΤΙΚΑ: - κατά τη σύνδεση υπάρχει μία χρονοκαθυστέρηση 1-3\" (δεν είναι παράλογο, ούτε κάνει τη διαφορά) - ελέγχοντας μέσα από web σε browser (live view), όταν πας να ανοίξεις για να δεις την οποιαδήποτε κάμερα, πάνω από τις μισές φορές εμφανίζει \"No connection\". Όταν το ξαναπατήσεις θα το δείξει κανονικά. Αυτό επαναλαμβάνεται συχνά σε όλες τις κάμερες ακόμη και σ αυτή που είναι δίπλα στο router.  - η κάμερα που είναι κοντά στο router μέσα από τη live view δεν ακούει σε καμμία εντολή για να γυρίσει προς οποιαδήποτε κατεύθυνση. Αντίθετα μέσα από την εφαρμογή για HY & κινητό, λειτουργεί κανονικά.  Σε γενικές γραμμές το θεωρώ αρκετά καλό & θα το πρότεινα αφού καλύπτει βασικές τουλάχιστον απαιτήσεις για εποπτεία Διαβάστε Λιγότερα'},\n",
+       "  {'stars': 5,\n",
+       "   'text': ' Για την χρήση που το προορίζαμε είναι πολύ καλό για το κόστος απόκτησής του '},\n",
+       "  {'stars': 4,\n",
+       "   'text': ' ΑΝΤΑΠΟΚΡΙΝΕΤΑΙ ΣΤΙΣ ΠΡΟΔΙΑΓΡΑΦΕΣ. ΚΑΛΗ ΤΙΜΗ ΓΙΑ ΟΤΙ ΠΡΟΣΦΕΡΕΙ. '},\n",
+       "  {'stars': 3, 'text': ' Καλο '},\n",
+       "  {'stars': 5, 'text': ' Πολύ καλό προιόν. Πολύ καλή υποστήριξη '},\n",
+       "  {'stars': 5, 'text': ' Άριστη σε όλα της '},\n",
+       "  {'stars': 5, 'text': ' Τέλειο! '},\n",
+       "  {'stars': 1,\n",
+       "   'text': ' 2 ρούτερ και με κανένα δεν συνεργάζεται σωστά , ξαφνικά χάνει το WiFi και συνδέεται μόνο άμα κάνεις restart router, απαράδεκτη!! '}])"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
