--- a/Auto translate.ipynb
+++ b/Auto translate.ipynb
@@ -349,7 +349,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py36 env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -363,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
