--- a/Twilio test.ipynb
+++ b/Twilio test.ipynb
@@ -57,9 +57,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Tensorflow 3.6",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tensorflow36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -71,7 +71,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
