--- a/Word2Vec.ipynb
+++ b/Word2Vec.ipynb
@@ -796,9 +796,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Tensorflow",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tensorflow"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -810,7 +810,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
